# some_tools_and_scripts

./: README.md  ascii_generator.py  notes.md
dotfiles/: .xbindkeysrc  bashrc
example_packages/db_manager/: CMakeLists.txt  README.md  build.sh
example_packages/db_manager/cmake/: settings.cmake
example_packages/db_manager/data/: data_base.db
example_packages/db_manager/include/db_manager/: settings.hpp
example_packages/db_manager/src/: save_to_sqlite_db.cpp
example_packages/gtk_snap_app/: .gitignore  CMakeLists.txt  README.md
example_packages/gtk_snap_app/include/simple_gtk_snap_app/: settings.hpp
example_packages/gtk_snap_app/snap/: snapcraft.yaml
example_packages/gtk_snap_app/snap/gui/: simple_gtk_snap_app.desktop
example_packages/gtk_snap_app/src/: main.cpp
example_packages/lan_explorer/: .gitignore  CMakeLists.txt  README.md
example_packages/lan_explorer/cmake/: settings.cmake
example_packages/lan_explorer/snap/: snapcraft.yaml
example_packages/lan_explorer/snap/gui/: lan_explorer.desktop
example_packages/lan_explorer/src/: main.cpp
example_packages/lan_explorer/test/: tests.sh
instructions/: clang_format_eclipse  clean_remote_repo.py  eclipse_desktop.desktop
playground/asdfasdf/: .gitignore  CMakeLists.txt  build.sh
playground/asdfasdf/src/: main.cpp
scripts/: clang-format-lint-check.sh  gazebo7_install.sh  notes_network.md  opencv_yuy2_to_mono8.cpp  ros_launch_with_valgrind_profile.launch  wake_server.py
scripts/alarm_clock/: README.md
setup/: install_linux_software.sh  settings_after_computer_reset.sh
utils/: termsize.py
utils/alam_clock/: README.md
