CMAKE_MINIMUM_REQUIRED(VERSION 3.5 FATAL_ERROR)

SET(SIMPLE_GTK_SNAP_APP "simple-gtk-snap-app") # Change this.

IF(NOT PROJECT_NAME)
  PROJECT (${LAN_EXPLORER})
ENDIF(NOT PROJECT_NAME)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c++11")

IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE Debug)
ENDIF()

FIND_PACKAGE(Threads)
find_package(PkgConfig)

pkg_check_modules(PKG REQUIRED gtkmm-3.0)

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_LIST_DIR}/include
  ${GTKMM_INCLUDE_DIRS}
  ${PKG_INCLUDE_DIRS}
)

ADD_EXECUTABLE(${SIMPLE_GTK_SNAP_APP} src/main.cpp)
TARGET_LINK_LIBRARIES(${SIMPLE_GTK_SNAP_APP}
    ${GTKMM_LIBRARIES}
    ${GTKMM_LIBRARY_DIRS}
    ${PKG_LIBRARIES}
)

################################
# Install Executable
################################

INSTALL(
  TARGETS ${SIMPLE_GTK_SNAP_APP}
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
)
